# microservices_site

./: .gitmodules  README  comand.txt  docker-compose.yml  pyproject.toml
nginx/: nginx.conf  renew-hook.sh
nginx/certs/live/example.com/: fullchain.pem  privkey.pem
